5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1637_2447.log
== TEST (2019-04-09 19:11:58) 
-- CODE:
preco = float(input("Valor do preco: "))
pag = float(input("Valor do pagamento: "))

if(preco > pag):
	dif = preco - pag
else
	dif = pag - preco
	
print(round(dif,2))
-- ERROR:
File "XXXX", line 6
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:12:03) 
-- CODE:
preco = float(input("Valor do preco: "))
pag = float(input("Valor do pagamento: "))

if(preco > pag):
	dif = preco - pag
else:
	dif = pag - preco
	
print(round(dif,2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:14:24) 
-- CODE:
preco = float(input("Valor do preco: "))
pag = float(input("Valor do pagamento: "))

if(preco > pag):
	dif = preco - pag
	print("Falta", round(dif,2))
else:
	dif = pag - preco
	print("Troco de", round(dif,2))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:14:44) 
-- CODE:
preco = float(input("Valor do preco: "))
pag = float(input("Valor do pagamento: "))

if(preco > pag):
	dif = preco - pag
	print("Falta", round(dif,2))
else:
	dif = pag - preco
	print("Troco de", round(dif,2))

-- EXECUTION TIME:
0.123549
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
